--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.378.0",
+    "mailgun.js": "^10.2.1",
+    "form-data":"^4.0.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
