--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "form-data": "^4.0.0",
     "lucide-react": "^0.378.0",
     "mailgun.js": "^10.2.1",
-    "form-data":"^4.0.0",
     "next": "14.2.3",
+    "next-seo": "^6.5.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
