--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "form-data": "^4.0.0",
     "gray-matter": "^4.0.3",
     "gsap": "^3.13.0",
+    "hcaptcha": "^0.2.0",
     "highlight.js": "^11.11.1",
     "isomorphic-dompurify": "^2.30.1",
     "mailgun.js": "^10.2.1",
